Get the tests to Actually Work (tm).
* 51% coverage.  Gulp.

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,11 +6,14 @@ max-line-length = 90
 max-complexity = 10
 exclude = *migrations*,build*
 statistics = true
-application-import-names = TODO_PACKAGE_NAME
+application-import-names = djcroco
 import-order-style = google
 ignore = D100,D101,D102,D104,D203,D204
+
+[coverage:run]
+source = djcroco
+omit = *tests*,*test_project*
 
 [coverage:report]
 show_missing = True
 skip_covered = True
-fail_under = 100
